2001-11-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Newfile_gump.cc: reset 'filename' in FreeSaveGameDetails
	* version.*: more namespaces, expanded linux version a bit

2001-11-24 Ryan Nunn <triforce@merlin.net.au>
	* version.* : Windows stuff and std namespace stuff.

2001-11-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* version.*: added getVersionInfo to produce basic version info

2001-11-24 Max Horn <max@quendi.de>
	* bggame.cc, combat.cc, gamedat.cc: removed unused declarations
	* files/utils.c: fixed stat() to simply do a call through (buf may legally be 0)
	* files/zip.c, files/unzip.c: ANSIfied, removing K&R cruft
	* mac/mac_autoconfig.h, mac/exult_version.rsrc.bin, mac/ExultMac.mcp.xml.sit: updated
	* objs/iregobjs.h, objs/objs.h: removed unused clone() method

2001-11-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Audio.h: the other is_track_playing didn't check if midi==NULL either

2001-11-23  Dominik Reichardt <gigdr@tesionmail.de>
	* Faq, Readme deleted
	* docs/ added FAQ.html and ReadMe.html
	* docs/images/ added back.gif and exult_logo.gif for the html files
	* docs/xml: updated faq.xml, docs.xml, html.xsl, text.xsl

2001-11-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Midi.h: is_track_playing didn't check if midi_device == NULL (Thanks Michael Z.)

2001-11-22 Ryan Nunn <triforce@merlin.net.au>
	* msvcstuff/Exult.dsp : Getting rid of a link warning

2001-11-22 Ryan Nunn <triforce@merlin.net.au>
	* Makefile.*, msvcstuff/*, win32/exultico.rc : Unify Win32 Resource
	  scripts, add Version Table to all Win32 Exult exes.

2001-11-22  Tristan Tarrant <nadir@users.sourceforge.net>
	* data/Makefile.am: added forgotten files so that make dist works again

2001-11-21 Ryan Nunn <triforce@merlin.net.au>
	* Makefile.am: Yes I did kill something (backslashes vs slashes)

2001-11-21 Ryan Nunn <triforce@merlin.net.au>
	* README.win32: Typo
