@@ -44,7 +44,7 @@ MAIN_OBJS=actions.o actorio.o actors.o alloc.o \
 	game.o gameclk.o gamedat.o gamerend.o gamewin.o keys.o keyactions.o \
 	menulist.o monsters.o mouse.o npcnear.o npctime.o palette.o \
 	paths.o readnpcs.o schedule.o segfile.o sigame.o tqueue.o txtscroll.o \
-	exultico.o cheat_screen.o shapeid.o 
+	exultico.o cheat_screen.o shapeid.o version.o
 # unused: npctest.o
 
 PATH_OBJS=Astar.o PathFinder.o Zombie.o path.o
